# neopy

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  Pipfile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: cli.md  cypher.md  db.md  enums.md  examples.md  exceptions.md  functions.md  graph.md  utils.md
src/: pyproject.toml
src/neopy/: __init__.py  __main__.py  cli.py  cypher.py  db.py  enums.py  examples.py  exceptions.py  functions.py  graph.py  query.py  utils.py
src/neopy/neo/: __init__.py  cypher.py  db.py  query.py
tests/: __init__.py  test_cli.py  test_neopy.py
