[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module="neopy"
author="Timothée Mazzucotelli"
author-email="timothee.mazzucotelli@gmail.com"
home-page="https://github.com/Pawamoy/neopy"
requires=[
    "neo4j-driver"
]
description-file="../README.md"
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]